# liboqs

./: CMakeLists.txt
.CMake/: alg_support.cmake
docs/algorithms/kem/: rlce.yml
src/: CMakeLists.txt  oqsconfig.h.cmake
src/kem/: kem.c  kem.h
src/kem/rlce/: CMakeLists.txt  GaloisField.c  bta.c  fieldMatrix.c  fieldPoly.c  reedsolomon.c  rlce.h  rlceCode.c
tests/: CMakeLists.txt  example_kem_rlce.c  test_cmdline.py  test_kem.c
tests/KATs/kem/: kats.json
